# newest_gysoplayer

./: LICENSE  build_android.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/gyso/gysoplayerapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CallbackHelper.h  GySoPlayer.cpp  GySoPlayer.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp
app/src/main/cpp/ffmpeg/include/libswresample/: swresample.h
app/src/main/java/com/gyso/gysoplayerapplication/: AssetsVideoStreamPusher.java  GySoPlayer.java  GySoPlayer.kt  GysoCameraHelper.kt  MainActivity.kt  PermissionUtil.kt  StreamManager.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/gyso/gysoplayerapplication/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
gysoplayer/: build.gradle.kts
gysoplayer/src/androidTest/java/com/gyso/player/: ExampleInstrumentedTest.kt
gysoplayer/src/main/cpp/: AudioChannel.cpp  BaseChannel.h  CMakeLists.txt  CallbackHelper.cpp  CallbackHelper.h  GySoPlayer.cpp  GySoPlayer.h  VideoChannel.h  native-lib.cpp  player.cpp
gysoplayer/src/main/java/com/gyso/player/: GySoPlayer.kt  (+5 more)
videohandlerlib/: build.gradle.kts
videohandlerlib/src/main/cpp/: CMakeLists.txt  CallbackHelper.cpp  CallbackHelper.h  GySoPlayer.cpp  GySoPlayer.h  GysoTools.cpp  GysoTools.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  videohandlerlib.cpp
(+15 files in other folders)
